tests/error/multi_decl.gw
#! [contains] from/to a multi-variable declaration
var int i, ii => var float f;
